--- a/static/styles.css
+++ b/static/styles.css
@@ -8,8 +8,8 @@ header {
     position: sticky;
     top:0;
 }
-h2 {
-    margin-bottom: 8px;
+h3 {
+    margin: 8px;
 }
 #map {
     position:fixed;
@@ -33,4 +33,8 @@ h2 {
 .stats-ul {
     list-style-type: none;
     padding: 0px;
+}
+.click {
+    font-size:12px;
+    padding: 0px
 }
